// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bedrock > bedrock/stream > chunks 1`] = `
[
  {
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQ",
    "role": "assistant",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": "The",
    },
    "p": "abcdefghijklm",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " capital of France is Paris",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": ". Paris",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABC",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " is not",
    },
    "p": "abcdefghijklmnopqrstuvw",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " only the",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " capital city but also the",
    },
    "p": "abcdefghijklmnopq",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " most",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQR",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " populous city in",
    },
    "p": "abcde",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " France,",
    },
    "p": "abcdefghijklmnop",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " known",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVW",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " for its significant",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWX",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " cultural,",
    },
    "p": "abcde",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " political",
    },
    "p": "abcdefghijk",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": ", and economic",
    },
    "p": "abcdefghijklmnop",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " influence. It is",
    },
    "p": "abcdefghijklmnopqrstuvwxyz",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " famous for landmarks",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABC",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " such as the Eiffel",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " Tower, the Louvre",
    },
    "p": "abcdefgh",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " Museum, and Notre",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJ",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": "-Dame",
    },
    "p": "abcdefghijklmnop",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " Cathedral,",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLM",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " among other",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQ",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " historical",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ012345",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " and",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXY",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " architectural",
    },
    "p": "abcdefghijklm",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": " sites",
    },
    "p": "abcde",
  },
  {
    "contentBlockIndex": 0,
    "delta": {
      "text": ".",
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ012",
  },
  {
    "contentBlockIndex": 0,
    "p": "abcdefghijklmnopqrst",
  },
  {
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWX",
    "stopReason": "end_turn",
  },
  {
    "metrics": {
      "latencyMs": 566,
    },
    "p": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVW",
    "usage": {
      "inputTokens": 13,
      "outputTokens": 63,
      "serverToolUsage": {},
      "totalTokens": 76,
    },
  },
]
`;

exports[`bedrock > bedrock/stream > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.operation.name": "chat",
      "gen_ai.request.model": "amazon.nova-premier-v1:0",
      "gen_ai.system": "bedrock",
      "gen_ai.usage.input_tokens": 13,
      "gen_ai.usage.output_tokens": 63,
      "http.request.header.content-type": "application/json",
      "http.request.header.x-vcr-filename": "stream",
      "http.request.method": "POST",
      "http.response.header.content-type": "application/vnd.amazon.eventstream",
      "http.response.header.server": "uvicorn",
      "http.response.header.transfer-encoding": "chunked",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.system":{"type":"string"},"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.output_tokens":{"type":"number"},"http.request.method":{"type":"string"},"url.full":{"type":"string"},"http.request.header.content-type":{"type":"string"},"http.request.header.x-vcr-filename":{"type":"string"},"http.response.status_code":{"type":"number"},"http.response.header.content-type":{"type":"string"},"http.response.header.server":{"type":"string"},"http.response.header.transfer-encoding":{"type":"string"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat amazon.nova-premier-v1:0",
      "url.full": "https://example.com/converse/model/amazon.nova-micro-v1%3A0/converse-stream",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat amazon.nova-premier-v1:0",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`bedrock > should call bedrock via gateway > bedrock 1`] = `
{
  "metrics": {
    "latencyMs": 611,
  },
  "output": {
    "message": {
      "content": [
        {
          "text": "The capital of France is Paris. Paris is not only the capital city but also the most populous city in France, known for its significant cultural, political, and economic influence both within the country and globally. It is famous for landmarks such as the Eiffel Tower, the Louvre Museum, and Notre-Dame Cathedral, among other historical and architectural sites.",
        },
      ],
      "role": "assistant",
    },
  },
  "stopReason": "end_turn",
  "usage": {
    "inputTokens": 13,
    "outputTokens": 69,
    "pydantic_ai_gateway": {
      "cost_estimate": 0.000010115,
    },
    "serverToolUsage": {},
    "totalTokens": 82,
  },
}
`;

exports[`bedrock > should call bedrock via gateway > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": {},
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": {},
      "gen_ai.request.max_tokens": {},
      "gen_ai.request.model": "amazon.nova-micro-v1:0",
      "gen_ai.request.seed": {},
      "gen_ai.request.stop_sequences": {},
      "gen_ai.request.temperature": {},
      "gen_ai.request.top_k": {},
      "gen_ai.request.top_p": {},
      "gen_ai.response.finish_reasons": {},
      "gen_ai.response.id": {},
      "gen_ai.response.model": "amazon.nova-micro-v1:0",
      "gen_ai.system": "bedrock",
      "gen_ai.system_instructions": {},
      "gen_ai.usage.cache_audio_read_tokens": {},
      "gen_ai.usage.cache_read_tokens": {},
      "gen_ai.usage.cache_write_tokens": {},
      "gen_ai.usage.input_audio_tokens": {},
      "gen_ai.usage.input_tokens": 13,
      "gen_ai.usage.output_audio_tokens": {},
      "gen_ai.usage.output_tokens": 69,
      "http.request.body.text": "{"modelId":"amazon.nova-premier-v1:0","system":[{"text":"You are a helpful assistant."}],"messages":[{"role":"user","content":[{"text":"What is the capital of France?"}]}]}",
      "http.response.body.text": "{"metrics":{"latencyMs":611},"output":{"message":{"content":[{"text":"The capital of France is Paris. Paris is not only the capital city but also the most populous city in France, known for its significant cultural, political, and economic influence both within the country and globally. It is famous for landmarks such as the Eiffel Tower, the Louvre Museum, and Notre-Dame Cathedral, among other historical and architectural sites."}],"role":"assistant"}},"stopReason":"end_turn","usage":{"inputTokens":13,"outputTokens":69,"serverToolUsage":{},"totalTokens":82,"pydantic_ai_gateway":{"cost_estimate":0.000010115}}}",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat amazon.nova-micro-v1:0",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat amazon.nova-micro-v1:0",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;
